Added Post method and updated swagger file
